--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,1 +1,21 @@
- 
+{
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "noEmit": true,
+    "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "allowUnusedLabels": true,
+    "allowUnreachableCode": true,
+    "exactOptionalPropertyTypes": false,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
+    "strictNullChecks": false
+  },
+  "exclude": [
+    "src/__tests__",
+    "src/tests",
+    "**/*.test.tsx",
+    "**/*.test.ts"
+  ]
+}
