--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -10,12 +10,16 @@
     "exactOptionalPropertyTypes": false,
     "noImplicitAny": false,
     "noImplicitThis": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "strict": false,
+    "suppressImplicitAnyIndexErrors": true,
+    "ignoreDeprecations": "5.0"
   },
   "exclude": [
     "src/__tests__",
     "src/tests",
     "**/*.test.tsx",
     "**/*.test.ts"
-  ]
+  ],
+  "include": ["src"]
 }
