--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -p tsconfig.build.json && vite build",
+    "build": "vite build --config vite.config.build.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest"
