--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "build": "vite build --config vite.config.build.js",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "jest",
+    "test:auth": "jest --testPathPattern=src/tests/auth --detectOpenHandles --verbose",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --testPathPattern=src/tests/auth --runInBand",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:basic-auth": "jest basic-auth.test.tsx"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.1",
     "@react-spring/web": "^9.7.5",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.71.1",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
@@ -31,22 +37,58 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@eslint/js": "^9.21.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.0.0",
+    "supabase": "^2.20.12",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vitest": "^3.1.1"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/tests/setupTests.js",
+      "<rootDir>/src/tests/jest.setup.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy",
+      "\\.(jpg|jpeg|png|gif|webp|svg)$": "<rootDir>/__mocks__/fileMock.js",
+      "^@/lib/supabase$": "<rootDir>/src/tests/__mocks__/supabaseMock.ts"
+    },
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": [
+        "babel-jest",
+        {
+          "presets": [
+            "@babel/preset-env",
+            ["@babel/preset-react", { "runtime": "automatic" }],
+            "@babel/preset-typescript"
+          ]
+        }
+      ]
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@supabase|nanoid)/)"
+    ]
   }
 }
